# LMS_PORTAL2.0

./: .env.example  app.py  config.py  pyproject.toml  readme.md  requirements.txt  vercel.json  wsgi.py
controllers/: announcement_controller.py  attendance_controller.py  auth_controller.py  auth_helpers.py  class_controller.py  dashboard_controller.py  exam_controller.py  fee_controller.py  parent_controller.py  parent_portal_controller.py  student_controller.py  student_message_controller.py  student_portal_controller.py  teacher_controller.py  teacher_portal_controller.py  timetable_controller.py  timetable_helpers.py
models/: admin_model.py  admission_model.py  announcement_model.py  attendance_model.py  challan_service.py  class_model.py  exam_model.py  fee_model.py  homework_model.py  parent_message_model.py  parent_model.py  parent_portal_model.py  school_model.py  student_message_model.py  student_model.py  student_portal_model.py  supabase_client.py  teacher_model.py  teacher_portal_model.py  timetable_model.py  user_model.py
scripts/: vercel_build.py
sql/: module10_student_messages_update.sql  module10_student_portal.sql  module11_exam_results.sql  module12_homework.sql  module13_class_subjects.sql  module14_exam_groups.sql  module15_fee_challans.sql  module16_fee_records_student_fk.sql  module1_admin.sql  module1_announcement_reads.sql  module2_students.sql  module3_parents.sql  module4_teachers.sql  module5_attendance.sql  module6_fees.sql  module8_parent_portal.sql  module9_teacher_portal.sql  schema.sql
static/css/: admin.css  (+13 more)
templates/: base.html
(+126 files in other folders)
