[project]
name = "lms-portal"
version = "1.0.0"
description = "School LMS portal"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "werkzeug==3.0.6",
    "python-dotenv==1.0.1",
    "supabase==2.10.0",
    "httpx==0.27.2",
    "fpdf2==2.8.2",
]

[tool.vercel]
entrypoint = "app:app"

[tool.vercel.scripts]
build = "python scripts/vercel_build.py"
